--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "declaration": true,
     "sourceMap": true,
-    "module": "commonjs",
+    "module": "ES2015",
+    "moduleResolution": "node",
     "outDir": "ts_temp",
     "lib": [
       "es2018",
