--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "sourceMap": true,
-    "module": "ES2015",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "outDir": "ts_temp",
     "lib": [
