--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@types/fs-extra": "^8.1.0",
     "@types/jest": "^25.2.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-plugin-transform-es2015-modules-simple-commonjs": "^0.3.0",
     "benchmark": "^2.1.4",
     "chalk": "^4.0.0",
     "coveralls": "^3.0.11",
