--- a/package.json
+++ b/package.json
@@ -25,34 +25,34 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
-    "@types/fs-extra": "^8.1.0",
-    "@types/jest": "^25.2.1",
-    "babel-core": "^7.0.0-bridge.0",
+    "@types/fs-extra": "^9.0.1",
+    "@types/jest": "^25.2.3",
+    "babel-core": "^6.26.3",
     "benchmark": "^2.1.4",
     "chalk": "^4.0.0",
-    "coveralls": "^3.0.11",
+    "coveralls": "^3.1.0",
     "esdoc": "^1.1.0",
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "esdoc-importpath-plugin": "^1.0.2",
     "esdoc-standard-plugin": "^1.0.0",
-    "execa": "^4.0.0",
+    "execa": "^4.0.2",
     "fs-extra": "^9.0.0",
     "gh-pages": "^2.2.0",
     "inquirer": "^7.1.0",
-    "jest": "^25.4.0",
+    "jest": "^26.0.1",
     "jsdom": "^16.2.2",
-    "ora": "^4.0.3",
-    "prettier": "^2.0.4",
+    "ora": "^4.0.4",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
-    "react-is": "^16.9.0",
+    "react-is": "^16.13.1",
     "recursive-readdir-sync": "^1.0.6",
-    "ts-jest": "^25.4.0",
-    "typescript": "^3.8.3",
+    "ts-jest": "^26.0.0",
+    "typescript": "^3.9.3",
     "walker": "^1.0.7"
   },
   "peerDependencies": {
