--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tiopkg/utils",
+  "name": "@artlab/utils",
   "version": "2.4.1",
   "author": "Yuan Tao <towyuan@outlook.com>",
   "scripts": {
@@ -11,10 +11,10 @@
     "test:ci": "npm run test -- --maxWorkers=4 && cat ./coverage/lcov.info | coveralls"
   },
   "description": "Fast, small and purely functional utility library",
-  "repository": "https://github.com/tiopkg/utils",
-  "bugs": "https://github.com/tiopkg/utils/issues",
+  "repository": "https://gitr.net/artlab/utils",
+  "bugs": "https://gitr.net/artlab/utils/issues",
   "keywords": [
-    "tiopkg",
+    "artlab",
     "utils",
     "ramda",
     "lodash",
@@ -24,35 +24,35 @@
   "sideEffects": false,
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@types/fs-extra": "^9.0.1",
-    "@types/jest": "^25.2.3",
+    "@types/jest": "^26.0.3",
     "babel-core": "^6.26.3",
     "benchmark": "^2.1.4",
-    "chalk": "^4.0.0",
+    "chalk": "^4.1.0",
     "coveralls": "^3.1.0",
     "esdoc": "^1.1.0",
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "esdoc-importpath-plugin": "^1.0.2",
     "esdoc-standard-plugin": "^1.0.0",
     "execa": "^4.0.2",
-    "fs-extra": "^9.0.0",
-    "gh-pages": "^2.2.0",
-    "inquirer": "^7.1.0",
-    "jest": "^26.0.1",
+    "fs-extra": "^9.0.1",
+    "gh-pages": "^3.1.0",
+    "inquirer": "^7.3.0",
+    "jest": "^26.1.0",
     "jsdom": "^16.2.2",
     "ora": "^4.0.4",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-is": "^16.13.1",
     "recursive-readdir-sync": "^1.0.6",
-    "ts-jest": "^26.0.0",
-    "typescript": "^3.9.3",
+    "ts-jest": "^26.1.1",
+    "typescript": "^3.9.6",
     "walker": "^1.0.7"
   },
   "peerDependencies": {
