--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,9 @@ cache:
   paths:
     - node_modules/
 
+before_script:
+- npm install
+
 test:
   script:
-    - npm install
-    - npm run test
+  - npm run test
