chore: rename scope to @tib

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@artlab/utils",
-  "version": "2.4.1",
+  "name": "@tib/utils",
+  "version": "2.4.2",
   "author": "Yuan Tao <towyuan@outlook.com>",
   "scripts": {
     "release": "node scripts/release.js",
@@ -11,10 +11,10 @@
     "test:ci": "npm run test -- --maxWorkers=4 && cat ./coverage/lcov.info | coveralls"
   },
   "description": "Fast, small and purely functional utility library",
-  "repository": "https://gitr.net/artlab/utils",
-  "bugs": "https://gitr.net/artlab/utils/issues",
+  "repository": "https://gitr.net/tib/utils",
+  "bugs": "https://gitr.net/tib/utils/issues",
   "keywords": [
-    "artlab",
+    "tib",
     "utils",
     "ramda",
     "lodash",
@@ -24,14 +24,14 @@
   "sideEffects": false,
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/core": "^7.10.4",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@types/fs-extra": "^9.0.1",
-    "@types/jest": "^26.0.3",
+    "@types/jest": "^26.0.7",
     "babel-core": "^6.26.3",
     "benchmark": "^2.1.4",
     "chalk": "^4.1.0",
@@ -40,19 +40,19 @@
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "esdoc-importpath-plugin": "^1.0.2",
     "esdoc-standard-plugin": "^1.0.0",
-    "execa": "^4.0.2",
+    "execa": "^4.0.3",
     "fs-extra": "^9.0.1",
     "gh-pages": "^3.1.0",
-    "inquirer": "^7.3.0",
+    "inquirer": "^7.3.3",
     "jest": "^26.1.0",
-    "jsdom": "^16.2.2",
-    "ora": "^4.0.4",
+    "jsdom": "^16.3.0",
+    "ora": "^4.0.5",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-is": "^16.13.1",
     "recursive-readdir-sync": "^1.0.6",
-    "ts-jest": "^26.1.1",
-    "typescript": "^3.9.6",
+    "ts-jest": "^26.1.3",
+    "typescript": "^3.9.7",
     "walker": "^1.0.7"
   },
   "peerDependencies": {
