--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tib/utils",
+  "name": "@loopx/utils",
   "version": "2.4.4",
   "author": "Yuan Tao <towyuan@outlook.com>",
   "scripts": {
@@ -12,10 +12,10 @@
     "test:ci": "npm run test -- --maxWorkers=4 && cat ./coverage/lcov.info | coveralls"
   },
   "description": "Fast, small and purely functional utility library",
-  "repository": "https://gitr.net/tib/utils",
-  "bugs": "https://gitr.net/tib/utils/issues",
+  "repository": "https://github.com/loopx/utils",
+  "bugs": "https://github.com/loopx/utils/issues",
   "keywords": [
-    "tib",
+    "loopx",
     "utils",
     "ramda",
     "lodash",
@@ -25,14 +25,14 @@
   "sideEffects": false,
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "@types/fs-extra": "^9.0.1",
-    "@types/jest": "^26.0.7",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@types/fs-extra": "^9.0.2",
+    "@types/jest": "^26.0.15",
     "babel-core": "^6.26.3",
     "benchmark": "^2.1.4",
     "chalk": "^4.1.0",
@@ -41,19 +41,19 @@
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
     "esdoc-importpath-plugin": "^1.0.2",
     "esdoc-standard-plugin": "^1.0.0",
-    "execa": "^4.0.3",
+    "execa": "^4.1.0",
     "fs-extra": "^9.0.1",
     "gh-pages": "^3.1.0",
     "inquirer": "^7.3.3",
-    "jest": "^26.1.0",
-    "jsdom": "^16.3.0",
-    "ora": "^4.0.5",
-    "prettier": "^2.0.5",
-    "react": "^16.13.1",
+    "jest": "^26.6.1",
+    "jsdom": "^16.4.0",
+    "ora": "^5.1.0",
+    "prettier": "^2.1.2",
+    "react": "^17.0.1",
     "react-is": "^16.13.1",
     "recursive-readdir-sync": "^1.0.6",
-    "ts-jest": "^26.1.3",
-    "typescript": "^3.9.7",
+    "ts-jest": "^26.4.3",
+    "typescript": "^4.0.5",
     "walker": "^1.0.7"
   },
   "peerDependencies": {
